# retail-impact-measurement-framework

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
config/: config.yaml
data/synthetic/: generate_data.py
docs/: methodology.md
notebooks/: 01_eda_and_kpi_definition.ipynb  02_propensity_score_matching.ipynb  03_ab_test_analysis.ipynb  04_instrumental_variables.ipynb  05_dashboard_and_reporting.ipynb  06_sensitivity_and_heterogeneity.ipynb
sql/: 01_extract_store_features.sql  02_extract_weekly_outcomes.sql  03_extract_promotion_costs.sql  04_extract_regional_ad_spend.sql  05_data_quality_checks.sql
src/: __init__.py
src/causal/: ab_testing.py  diff_in_diff.py  heterogeneity.py  instrumental_variables.py  propensity_score.py  sensitivity.py
src/data/: data_loader.py  feature_engineering.py  validation.py
src/data/processed/: results_20260318_112747.json  results_20260318_113833.json
src/metrics/: attribution.py  kpi_framework.py
src/pipeline/: cli.py  measurement_pipeline.py  monitoring.py
src/utils/: export.py  logging_config.py  statistical_tests.py  visualization.py
tests/: conftest.py  test_ab_testing.py  test_cli.py  test_heterogeneity.py  test_instrumental_variables.py  test_integration.py  test_kpi_framework.py  test_monitoring.py  test_pipeline.py  test_propensity_score.py  test_sensitivity.py  test_validation.py
